# gb-ctr

./: .gitattributes  .gitignore  .gitmodules  .latexmkrc  .travis.yml  CMakeLists.txt  Makefile  README.markdown  common.typ  config.tex  gbctr.bib  gbctr.tex  gbctr.typ  gbctr.yml  justfile  mise.toml  opcodes.toml  preface.typ  timing.typ  xx-cpu-chips.tex  xx-dma.tex  xx-dmg-boards.tex  xx-external-bus.tex  xx-huc1.tex  xx-huc3.tex  xx-instruction-set.tex  xx-mainboards.tex  xx-mbc1.tex  xx-mbc2.tex  xx-mbc3.tex  xx-mbc30.tex  xx-mbc5.tex  xx-mbc6.tex  xx-memory-map.tex  xx-opcode-tables.tex  xx-pinouts.tex
.github/workflows/: ci.yml
.travis/: id_rsa.enc
appendix/: .latexmkrc  external-bus.tex  external-bus.typ  memory-map.tex  memory-map.typ  opcode-tables.tex  opcode-tables.typ  pinouts.tex  pinouts.typ
chapter/cartridges/: huc1.tex  huc1.typ  huc3.tex  huc3.typ  intro.typ  mbc1.tex  mbc1.typ  mbc2.tex  mbc2.typ  mbc3.tex  mbc3.typ  mbc30.tex  mbc30.typ  mbc5.tex  mbc5.typ  mbc6.tex  mbc6.typ  mbc7.tex  mbc7.typ  mmm01.tex  mmm01.typ  tama5.tex  tama5.typ
chapter/console/: clocks.typ  intro.typ
chapter/cpu/: .latexmkrc  instruction-set.tex  instruction-set.typ  intro.typ  simple.typ  timing.tex  timing.typ
chapter/peripherals/: boot-rom.tex  boot-rom.typ  dma.tex  dma.typ  p1.tex  p1.typ  ppu.tex  ppu.typ  serial.tex  serial.typ
code-snippets/: mbc1_dump.py  mbc1_rom_dump.py  mbc2_rom_dump.py
